test/sema/typeck/lambda/variadic-not-last.dora
fn f() {
    |values: Int32..., other: Int32| {
        values;
        other;
    };
}
